--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ button {
     background-color: rgba(1, 4, 9, .3);
     color: #c9d1d9;
     border: 1px solid rgba(56, 139, 253, .4);
+    transition: .3s all;
 }
 
 .form-control:focus {
@@ -208,6 +209,27 @@ button {
 .py-5 {
     padding-top: 6rem !important;
 }
+
+.blocked-btn,
+.blocked-btn:hover,
+.blocked-btn:focus,
+.blocked-btn:active {
+    color: rgba(142, 148, 154, .7);
+    background-color: rgba(241,241,241, .5);
+    box-shadow: inset 0 0 0 1px rgba(241,241,241, .7);
+    cursor: default;
+    pointer-events: none;
+}
+
+.dark .blocked-btn,
+.dark .blocked-btn:hover,
+.dark .blocked-btn:focus,
+.dark .blocked-btn:active {
+    color: rgba(142, 148, 154, .7);
+    background-color: transparent;
+    box-shadow: inset 0 0 0 1px rgba(142, 148, 154, .3);
+}
+
 
 @media (max-width: 575px) {
     h1 {
