--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ h1 {
     border-radius: 4px;
     font-weight: bold;
     color: #79c0ff;
+    height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .btn-default:hover {
@@ -61,6 +66,20 @@ h1 {
         inset 0 0 4px 2px rgba(56, 139, 253, .4) !important;
 }
 
+.description {
+    color: #e83e8c;
+    font-size: 12px;
+    font-style: italic;
+    position: absolute;
+    bottom: 6px;
+    left: 0;
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-weight: 400;
+    transition: .3s all;
+}
+
 .history-wrap {
     background-color: #0d1117;
     border: 2px solid #30363d;
@@ -73,7 +92,8 @@ h1 {
     transition: .3s all;
 }
 
-.hidden {
+.hidden,
+.disable-keyboard .description {
     opacity: 0;
     visibility: hidden;
 }
@@ -140,17 +160,22 @@ button {
     box-shadow: inset 0 0 0 1px rgba(56, 139, 253, .4);
 }
 
-.tumbler-theme {
+.tumblers {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+/* .tumbler-theme {
     position: absolute;
     top: 15px;
     right: 15px;
-}
+} */
 
-.tumbler-sound {
+/* .tumbler-sound {
     position: absolute;
     top: 15px;
     left: 15px;
-}
+} */
 
 .tumbler input[type="checkbox"] {
     position: relative;
@@ -236,10 +261,13 @@ button {
     box-shadow: inset 0 0 0 1px rgba(142, 148, 154, .3);
 }
 
-
 @media (max-width: 575px) {
     h1 {
         font-size: 1.5rem;
+    }
+    .btn-default {
+        height: 20vw;
+        max-height: 90px;
     }
 }
 
