--- a/style.css
+++ b/style.css
@@ -119,7 +119,6 @@ h1 {
 .history-wrap.hidden pre code {
     height: 0;
     padding: 0;
-    margin: 0;
 }
 
 .history-wrap code {
@@ -130,6 +129,7 @@ h1 {
 
 pre {
     margin-bottom: 0;
+    transition: .3s all;
 }
 
 button {
